--- a/MoviesLib/Base.lproj/Main.storyboard
+++ b/MoviesLib/Base.lproj/Main.storyboard
@@ -19,13 +19,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="toystory3" translatesAutoresizingMaskIntoConstraints="NO" id="0dp-0s-4TC">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="324"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="357.33333333333331"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="324" id="fDa-KH-sWc"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dwB-Q4-7zH">
-                                <rect key="frame" x="162.66666666666666" y="137" width="50" height="50"/>
+                                <rect key="frame" x="162.66666666666666" y="153.66666666666666" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="V4D-P9-B66"/>
                                     <constraint firstAttribute="width" secondItem="dwB-Q4-7zH" secondAttribute="height" multiplier="1:1" id="WcF-qW-TT0"/>
@@ -33,37 +33,37 @@
                                 <state key="normal" image="play"/>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="MTS-kU-FOf">
-                                <rect key="frame" x="0.0" y="264" width="375" height="60"/>
+                                <rect key="frame" x="0.0" y="297.33333333333331" width="375" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="8JR-sI-yyE"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toy Story 3" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lT-dC-6on">
-                                <rect key="frame" x="16" y="325" width="343" height="33.666666666666686"/>
+                                <rect key="frame" x="16" y="358.33333333333331" width="343" height="33.666666666666686"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ação | Comédia | Animação" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OGD-PC-0ZD">
-                                <rect key="frame" x="16" y="364" width="164.33333333333334" height="16"/>
+                                <rect key="frame" x="16" y="397.33333333333331" width="164.66666666666666" height="16"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="02:00h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n06-Kh-tEm">
-                                <rect key="frame" x="315" y="364" width="44" height="16"/>
+                                <rect key="frame" x="315" y="397.33333333333331" width="44" height="16"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⭐️ 10.0/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTE-gI-G1L">
-                                <rect key="frame" x="16" y="386" width="343" height="16"/>
+                                <rect key="frame" x="16" y="419.33333333333331" width="343" height="16"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" name="Main"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C1w-f3-lBV">
-                                <rect key="frame" x="0.0" y="418" width="375" height="394"/>
+                                <rect key="frame" x="0.0" y="451.33333333333326" width="375" height="360.66666666666674"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sinopse" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DyU-qq-Ds7">
                                         <rect key="frame" x="16" y="16" width="343" height="16"/>
@@ -72,7 +72,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Rlr-o2-sp9">
-                                        <rect key="frame" x="16" y="38" width="343" height="310"/>
+                                        <rect key="frame" x="16" y="38" width="343" height="276.66666666666669"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
@@ -103,6 +103,7 @@
                             <constraint firstItem="n06-Kh-tEm" firstAttribute="top" secondItem="OGD-PC-0ZD" secondAttribute="top" id="M4U-mH-2xN"/>
                             <constraint firstItem="C1w-f3-lBV" firstAttribute="top" secondItem="tTE-gI-G1L" secondAttribute="bottom" constant="16" id="OXM-dQ-948"/>
                             <constraint firstItem="0dp-0s-4TC" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Pqe-73-F43"/>
+                            <constraint firstItem="0dp-0s-4TC" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.440217" id="Wla-Qs-1LB"/>
                             <constraint firstItem="tTE-gI-G1L" firstAttribute="leading" secondItem="OGD-PC-0ZD" secondAttribute="leading" id="Ymb-nn-i6l"/>
                             <constraint firstItem="n06-Kh-tEm" firstAttribute="trailing" secondItem="1lT-dC-6on" secondAttribute="trailing" id="ZRg-Mx-qY5"/>
                             <constraint firstItem="C1w-f3-lBV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bQ4-8b-MBt"/>
