--- a/MoviesLib/Base.lproj/Main.storyboard
+++ b/MoviesLib/Base.lproj/Main.storyboard
@@ -19,13 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="toystory3" translatesAutoresizingMaskIntoConstraints="NO" id="0dp-0s-4TC">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="357.33333333333331"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="324" id="fDa-KH-sWc"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="324.66666666666669"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dwB-Q4-7zH">
-                                <rect key="frame" x="162.66666666666666" y="153.66666666666666" width="50" height="50"/>
+                                <rect key="frame" x="162.66666666666666" y="137.33333333333334" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="V4D-P9-B66"/>
                                     <constraint firstAttribute="width" secondItem="dwB-Q4-7zH" secondAttribute="height" multiplier="1:1" id="WcF-qW-TT0"/>
@@ -33,37 +30,37 @@
                                 <state key="normal" image="play"/>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="MTS-kU-FOf">
-                                <rect key="frame" x="0.0" y="297.33333333333331" width="375" height="60"/>
+                                <rect key="frame" x="0.0" y="264.66666666666669" width="375" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="8JR-sI-yyE"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toy Story 3" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lT-dC-6on">
-                                <rect key="frame" x="16" y="358.33333333333331" width="343" height="33.666666666666686"/>
+                                <rect key="frame" x="16" y="325.66666666666669" width="343" height="33.666666666666686"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ação | Comédia | Animação" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OGD-PC-0ZD">
-                                <rect key="frame" x="16" y="397.33333333333331" width="164.66666666666666" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ação | Comédia | Animação" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="OGD-PC-0ZD">
+                                <rect key="frame" x="16" y="364.66666666666669" width="164.33333333333334" height="15.666666666666686"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="02:00h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n06-Kh-tEm">
-                                <rect key="frame" x="315" y="397.33333333333331" width="44" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="02:00h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n06-Kh-tEm">
+                                <rect key="frame" x="315" y="364.66666666666669" width="44" height="16"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⭐️ 10.0/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTE-gI-G1L">
-                                <rect key="frame" x="16" y="419.33333333333331" width="343" height="16"/>
+                                <rect key="frame" x="16" y="386.33333333333331" width="343" height="16"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" name="Main"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C1w-f3-lBV">
-                                <rect key="frame" x="0.0" y="451.33333333333326" width="375" height="360.66666666666674"/>
+                                <rect key="frame" x="0.0" y="418.33333333333326" width="375" height="393.66666666666674"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sinopse" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DyU-qq-Ds7">
                                         <rect key="frame" x="16" y="16" width="343" height="16"/>
@@ -72,7 +69,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Rlr-o2-sp9">
-                                        <rect key="frame" x="16" y="38" width="343" height="276.66666666666669"/>
+                                        <rect key="frame" x="16" y="38" width="343" height="309.66666666666669"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
@@ -89,41 +86,83 @@
                                     <constraint firstItem="Rlr-o2-sp9" firstAttribute="top" secondItem="DyU-qq-Ds7" secondAttribute="bottom" constant="6" id="qpV-Ec-Cnh"/>
                                     <constraint firstItem="DyU-qq-Ds7" firstAttribute="top" secondItem="C1w-f3-lBV" secondAttribute="top" constant="16" id="rtV-Sm-hGr"/>
                                 </constraints>
+                                <variation key="heightClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="rtV-Sm-hGr"/>
+                                    </mask>
+                                </variation>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="OGD-PC-0ZD" firstAttribute="leading" secondItem="1lT-dC-6on" secondAttribute="leading" id="3jP-va-WvT"/>
+                            <constraint firstItem="0dp-0s-4TC" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.6" id="3tP-di-e5R"/>
                             <constraint firstAttribute="bottom" secondItem="C1w-f3-lBV" secondAttribute="bottom" id="4pb-3J-Knw"/>
                             <constraint firstItem="tTE-gI-G1L" firstAttribute="top" secondItem="OGD-PC-0ZD" secondAttribute="bottom" constant="6" id="70y-SB-lQ4"/>
                             <constraint firstItem="MTS-kU-FOf" firstAttribute="trailing" secondItem="0dp-0s-4TC" secondAttribute="trailing" id="7U3-af-RGL"/>
                             <constraint firstItem="dwB-Q4-7zH" firstAttribute="centerY" secondItem="0dp-0s-4TC" secondAttribute="centerY" id="9Yg-oW-ZwF"/>
                             <constraint firstItem="1lT-dC-6on" firstAttribute="trailing" secondItem="0dp-0s-4TC" secondAttribute="trailing" constant="-16" id="DKr-IL-F7F"/>
+                            <constraint firstAttribute="trailing" secondItem="C1w-f3-lBV" secondAttribute="trailing" id="JGM-61-TBI"/>
+                            <constraint firstItem="n06-Kh-tEm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="OGD-PC-0ZD" secondAttribute="trailing" constant="10" id="KCz-he-ADb"/>
                             <constraint firstItem="n06-Kh-tEm" firstAttribute="top" secondItem="OGD-PC-0ZD" secondAttribute="top" id="M4U-mH-2xN"/>
+                            <constraint firstItem="0dp-0s-4TC" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="ODb-jJ-H5Y"/>
                             <constraint firstItem="C1w-f3-lBV" firstAttribute="top" secondItem="tTE-gI-G1L" secondAttribute="bottom" constant="16" id="OXM-dQ-948"/>
                             <constraint firstItem="0dp-0s-4TC" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Pqe-73-F43"/>
-                            <constraint firstItem="0dp-0s-4TC" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.440217" id="Wla-Qs-1LB"/>
+                            <constraint firstItem="0dp-0s-4TC" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.6" id="QCT-g4-Zbq"/>
+                            <constraint firstItem="0dp-0s-4TC" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="Wla-Qs-1LB"/>
                             <constraint firstItem="tTE-gI-G1L" firstAttribute="leading" secondItem="OGD-PC-0ZD" secondAttribute="leading" id="Ymb-nn-i6l"/>
                             <constraint firstItem="n06-Kh-tEm" firstAttribute="trailing" secondItem="1lT-dC-6on" secondAttribute="trailing" id="ZRg-Mx-qY5"/>
                             <constraint firstItem="C1w-f3-lBV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bQ4-8b-MBt"/>
+                            <constraint firstItem="C1w-f3-lBV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bhe-cP-nZr"/>
                             <constraint firstItem="MTS-kU-FOf" firstAttribute="bottom" secondItem="0dp-0s-4TC" secondAttribute="bottom" id="cpj-TY-SGW"/>
+                            <constraint firstItem="C1w-f3-lBV" firstAttribute="leading" secondItem="0dp-0s-4TC" secondAttribute="trailing" id="dIp-8u-KXa"/>
                             <constraint firstItem="C1w-f3-lBV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fyW-Ld-1zg"/>
                             <constraint firstItem="dwB-Q4-7zH" firstAttribute="centerX" secondItem="0dp-0s-4TC" secondAttribute="centerX" id="hH9-tV-nAH"/>
                             <constraint firstItem="OGD-PC-0ZD" firstAttribute="top" secondItem="1lT-dC-6on" secondAttribute="bottom" constant="5.3333333333333144" id="hSQ-oM-ala"/>
                             <constraint firstItem="0dp-0s-4TC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="j8r-Y3-60g"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Rlr-o2-sp9" secondAttribute="bottom" constant="12" id="jVQ-79-Ahe"/>
                             <constraint firstItem="1lT-dC-6on" firstAttribute="top" secondItem="0dp-0s-4TC" secondAttribute="bottom" constant="1" id="rDX-Ba-TPe"/>
-                            <constraint firstItem="0dp-0s-4TC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rQZ-EH-nyW"/>
-                            <constraint firstItem="1lT-dC-6on" firstAttribute="leading" secondItem="0dp-0s-4TC" secondAttribute="leading" constant="16" id="twS-0O-HfS"/>
+                            <constraint firstItem="0dp-0s-4TC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="rQZ-EH-nyW"/>
+                            <constraint firstItem="0dp-0s-4TC" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="rWK-m0-dNn"/>
+                            <constraint firstAttribute="trailing" secondItem="C1w-f3-lBV" secondAttribute="trailing" id="rya-Y3-uCF"/>
+                            <constraint firstItem="1lT-dC-6on" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="twS-0O-HfS"/>
                             <constraint firstItem="MTS-kU-FOf" firstAttribute="leading" secondItem="0dp-0s-4TC" secondAttribute="leading" id="wxY-gK-YKN"/>
                             <constraint firstItem="tTE-gI-G1L" firstAttribute="trailing" secondItem="n06-Kh-tEm" secondAttribute="trailing" id="ykW-vE-ep5"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="3tP-di-e5R"/>
+                                <exclude reference="ODb-jJ-H5Y"/>
+                                <exclude reference="QCT-g4-Zbq"/>
+                                <exclude reference="rWK-m0-dNn"/>
+                                <exclude reference="JGM-61-TBI"/>
+                                <exclude reference="bhe-cP-nZr"/>
+                                <exclude reference="dIp-8u-KXa"/>
+                                <exclude reference="rya-Y3-uCF"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="3tP-di-e5R"/>
+                                <include reference="ODb-jJ-H5Y"/>
+                                <exclude reference="Pqe-73-F43"/>
+                                <include reference="QCT-g4-Zbq"/>
+                                <exclude reference="Wla-Qs-1LB"/>
+                                <include reference="JGM-61-TBI"/>
+                                <exclude reference="OXM-dQ-948"/>
+                                <exclude reference="bQ4-8b-MBt"/>
+                                <include reference="bhe-cP-nZr"/>
+                                <include reference="dIp-8u-KXa"/>
+                                <exclude reference="fyW-Ld-1zg"/>
+                                <exclude reference="rya-Y3-uCF"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="118.96551724137932"/>
+            <point key="canvasLocation" x="139.95535714285714" y="118.84057971014494"/>
         </scene>
     </scenes>
     <resources>
@@ -131,7 +170,7 @@
         <image name="play" width="53" height="53"/>
         <image name="toystory3" width="400" height="330"/>
         <namedColor name="Main">
-            <color red="1" green="0.76470588235294112" blue="0.25882352941176467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.76499998569488525" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
